# flying_robot_course

./: .gitignore  ASSIGNMENTS.md  README.md  readme.md  verify_equivalence.sh  verify_numerical.py
multirotor_simulator/: ARCHITECTURE.md  Cargo.toml  DEBUGGING_STATUS.md  DRONE_STACK_ASPECTS.md  MIGRATION.md  QUICKSTART.sh  README.md  SOLUTION.md  analyze_figure8.py  plot_assignment1.py  plot_assignment2.py  plot_assignment4.py  plot_assignment5_pillow.py  trajectory_modular_Exp_Euler.csv  trajectory_modular_Exp_RK4.csv
multirotor_simulator/results/: README.md  bench_step_dry.csv  bench_step_no_loadcell.csv  cf_log_toc_1772222075.txt  hover_dry.csv  sign_check_live.csv  sign_check_live_highcmd.csv
multirotor_simulator/results/data/: assignment2_circle.csv  assignment2_figure8.csv  assignment2_hover.csv  assignment3_mekf.csv  assignment4_closedloop.csv  assignment4_closedloop_classic.csv  assignment4_openloop.csv  assignment4_openloop_safety.csv  assignment4_planned.csv  assignment5_closedloop_circle.csv  assignment5_closedloop_figure8.csv  assignment5_closedloop_hover.csv  assignment5_planned_figure8_baseline.csv  assignment5_planned_figure8_slow_before_gain.csv  assignment5_sweep_summary.csv  trajectory_modular_ExpEuler.csv
multirotor_simulator/results/images/: figure8_csv_analysis.txt
multirotor_simulator/scripts/: analyze_assignment5_sweep.py  bench_motor_id.py  bench_motor_id_README.md  cf_bench_logger.py  cf_bench_logger_README.md  cf_offboard_player.py  plot_assignment1.py  plot_assignment4_standalone.py  sweep_assignment5.sh  sweep_assignment5_interactive.sh
multirotor_simulator/src/: lib.rs
multirotor_simulator/src/controller/: mod.rs
multirotor_simulator/src/dynamics/: mod.rs  params.rs  params_delete.rs  simulator.rs  simulator_delete.rs  state.rs  state_delete.rs
multirotor_simulator/src/estimation/: mod.rs
multirotor_simulator/tests/: test_geometric_controller.rs
(+327 files in other folders)
