[package]
name = "multirotor_simulator"
version = "0.1.0"
edition = "2021"
authors = ["Georg Wolnik"]
description = "A modular multirotor dynamics simulator for flying robots"

[dependencies]
csv = "1.3"

[lib]
name = "multirotor_simulator"
path = "src/lib.rs"

[[bin]]
name = "assignment1"
path = "src/bin/assignment1.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"
