[package]
name = "multirotor_simulator"
version = "0.1.0"
edition = "2021"
authors = ["Georg Wolnik"]
description = "A modular multirotor dynamics simulator for flying robots"

[dependencies]
csv = "1.3"
simple_qp = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
crazyflie-lib = "0.4"
crazyflie-link = "0.3"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"              # ← add this line

[lib]
name = "multirotor_simulator"
path = "src/lib.rs"

[[bin]]
name = "assignment1"
path = "src/bin/assignment1.rs"

[[bin]]
name = "assignment2"
path = "src/bin/assignment2.rs"

[[bin]]
name = "assignment3"
path = "src/bin/assignment3.rs"

[[bin]]
name = "assignment4"
path = "src/bin/assignment4.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"
